--- a/static/design/css.less
+++ b/static/design/css.less
@@ -44,15 +44,33 @@ code{
     color: #484848;
     text-shadow: 0px 1px 0px #ffffff;
     filter: dropshadow(color=#ffffff, offx=0, offy=1);
+    overflow: hidden;
     
     h1{
       font-size: 24px;
       padding-left: 7px;
+      float: left;
+    }
+
+    #edit_save_buttons{
+      float: right;
     }
   }
 
   #markdown_content{
     padding-top: 20px;
+  }
+
+  textarea{
+    width: 100%;
+    height: 500px;
+  }
+
+  #notification{
+    display: none;
+    background: yellow;
+    margin: 0 -30px 0 -30px;
+    padding: 10px;
   }
 }
 
