5 minute bug fixing

--- a/static/design/css.less
+++ b/static/design/css.less
@@ -92,6 +92,7 @@ code{
     display: block;
     border-bottom: 1px solid #060606;
     border-top: 1px solid #353536;
+    outline: none;
 
     &:first-child{
       border-top: none;
