--- a/static/design/css.less
+++ b/static/design/css.less
@@ -54,6 +54,38 @@ code{
 
     #edit_save_buttons{
       float: right;
+
+      a#save, a#edit{
+        background: #5fbc70;
+        background: -moz-linear-gradient(top, #5fbc70 0%, #1e8932 100%);
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5fbc70), color-stop(100%,#1e8932));
+        background: -webkit-linear-gradient(top, #5fbc70 0%,#1e8932 100%);
+        background: -o-linear-gradient(top, #5fbc70 0%,#1e8932 100%);
+        background: -ms-linear-gradient(top, #5fbc70 0%,#1e8932 100%);
+        background: linear-gradient(top, #5fbc70 0%,#1e8932 100%);
+        color: white;
+        -webkit-border-radius: 4px;
+        border-radius: 4px; 
+        text-shadow: 0px -1px 0px #1e6e2e;
+        text-decoration: none;
+        font-weight: bold;
+        display: inline-block;
+        padding: 5px 10px;
+        -webkit-box-shadow: inset 0px 1px 0px 0px #afddb8;
+        box-shadow: inset 0px 1px 0px 0px #afddb8; 
+        border: 1px solid #525252;
+
+        &:active{
+          background: #1e8932;
+          background: -moz-linear-gradient(top, #1e8932 0%, #5fbc70 100%);
+          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1e8932), color-stop(100%,#5fbc70));
+          background: -webkit-linear-gradient(top, #1e8932 0%,#5fbc70 100%);
+          background: -o-linear-gradient(top, #1e8932 0%,#5fbc70 100%);
+          background: -ms-linear-gradient(top, #1e8932 0%,#5fbc70 100%);
+          background: linear-gradient(top, #1e8932 0%,#5fbc70 100%);
+          text-shadow: 0px 1px 0px #1e6e2e;
+        }
+      }
     }
   }
 
