--- a/static/design/css.less
+++ b/static/design/css.less
@@ -102,7 +102,18 @@ code{
     display: none;
     background: yellow;
     margin: 0 -30px 0 -30px;
-    padding: 10px;
+    padding: 6px 20px;
+    background: #eceda8;
+    background: -moz-linear-gradient(top, #eceda8 0%, #dee19e 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eceda8), color-stop(100%,#dee19e));
+    background: -webkit-linear-gradient(top, #eceda8 0%,#dee19e 100%);
+    background: -o-linear-gradient(top, #eceda8 0%,#dee19e 100%);
+    background: -ms-linear-gradient(top, #eceda8 0%,#dee19e 100%);
+    background: linear-gradient(top, #eceda8 0%,#dee19e 100%);
+    -webkit-box-shadow: inset 0px 1px 0px 0px #fafae9;
+    box-shadow: inset 0px 1px 0px 0px #fafae9; 
+    color: #525252;
+    border-bottom: 1px solid #bfbfbf;
   }
 }
 
