new file feature

--- a/static/design/css.less
+++ b/static/design/css.less
@@ -55,7 +55,7 @@ code{
     #edit_save_buttons{
       float: right;
 
-      a#save, a#edit{
+      a#save, a#edit, a#cancel{
         background: #5fbc70;
         background: -moz-linear-gradient(top, #5fbc70 0%, #1e8932 100%);
         background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5fbc70), color-stop(100%,#1e8932));
