--- a/static/design/css.less
+++ b/static/design/css.less
@@ -127,6 +127,7 @@ code{
   padding-bottom: 4px;
   -webkit-box-shadow: 0px 0px 0px 1px #000000;
   box-shadow: 0px 0px 0px 1px #000000;
+  overflow: hidden;
 
   a{
     color: #fff;
