--- a/static/design/css.less
+++ b/static/design/css.less
@@ -28,13 +28,6 @@ code{
   -webkit-box-shadow: 0px 0px 8px 0px #494949;
   box-shadow: 0px 0px 8px 0px #494949; 
 
-  pre{
-    background: #ddd;
-    border: 1px solid #bbb;
-    padding: 12px;
-    overflow: auto;
-  }
-
   code{
     background: #ddd;
     padding: 1px 3px;
@@ -139,6 +132,27 @@ code{
 
     h4{
       font-size: 17px;
+    }
+
+    pre{
+      background: #ddd;
+      border: 1px solid #bbb;
+      padding: 12px;
+    }
+
+    .CodeMirror{
+      background: #fafafa;
+      border: 1px solid #aaa;
+
+      pre{
+        background: transparent;
+        border: none;
+        padding: 0px;
+      }
+    }
+
+    .CodeMirror-scroll{
+      height: 100%;
     }
   }
 
