--- a/static/design/css.less
+++ b/static/design/css.less
@@ -177,7 +177,7 @@ code{
   box-shadow: 0px 0px 0px 1px #000000;
   overflow: hidden;
 
-  a.link{
+  .link{
     color: #fff;
     text-decoration: none;
     padding: 10px 10px 10px 15px;
@@ -198,6 +198,11 @@ code{
     code{
       font-size: 14px;
     }
+  }
+
+  .empty{
+    color: #ececec;
+    font-style: italic;
   }
 
   a{
