--- a/static/design/css.less
+++ b/static/design/css.less
@@ -119,7 +119,9 @@ code{
     a{
       color: #1563f1;
     }
-
+    a.link-missing{
+      color: #F18315;
+    }
     h1, h2{
       border-bottom: 1px solid #bbb;
       margin-bottom: 3px;
