added directive for items in file navigation bar

--- a/public/css/css.less
+++ b/public/css/css.less
@@ -23,6 +23,21 @@ body{
     border-bottom: 1px solid #222;
     color: #4e6a77;
   }
+
+  #pages-list{
+
+    file-item {
+      padding: 10px;
+      display: block;
+      font-size: 14px;
+      list-style-type: none;
+      font-family: "PT Sans", sans-serif;
+      background: #3c3c3c;
+      color: #b4b4b4;
+      border-bottom: 1px solid #222222;
+    }
+
+  }
 }
 
 #wiki-content{
