--- a/public/css/css.less
+++ b/public/css/css.less
@@ -26,7 +26,7 @@ body{
 
   #pages-list{
 
-    file-item {
+    a {
       padding: 10px;
       display: block;
       font-size: 14px;
@@ -35,6 +35,7 @@ body{
       background: #3c3c3c;
       color: #b4b4b4;
       border-bottom: 1px solid #222222;
+      text-decoration: none;
     }
 
   }
