Added ability to change directories on frontend
This has been done by having a view for the
navigation sidebar and having a view for the wiki
page that is loaded.

Some cleaning up of the public/js/app.js code is
needed

--- a/public/css/css.less
+++ b/public/css/css.less
@@ -6,7 +6,7 @@ body{
 @side: 300px;
 
 #sidebar{
-  position: absolute;
+  position: fixed;
   background: #494949;
   border-right: 1px solid #494949;
   top: 0;
