--- a/public/css/css.less
+++ b/public/css/css.less
@@ -26,7 +26,7 @@ body{
 
   #pages-list{
 
-    a {
+    a.entity {
       padding: 10px;
       display: block;
       font-size: 14px;
@@ -38,6 +38,10 @@ body{
       text-decoration: none;
     }
 
+    a.path {
+      padding: 5px;
+      color: white;
+    }
   }
 }
 
