--- a/public/css/css.less
+++ b/public/css/css.less
@@ -1,5 +1,5 @@
 body{
-  background: #f8f8f8;
+  background: #ffffff;
   margin: 0;
 }
 
@@ -60,11 +60,33 @@ body{
 
   p{
     margin: 10px 0;
-    font-family: "PT Sans", sans-serif;
+    font-family: "Fira Sans", sans-serif;
     font-size: 16px;
     line-height: 20px;
     color: #242424;
   }
+}
+
+@font-face{
+  font-family: 'Fira Sans';
+  src: url('fonts/FiraSans-Regular.eot');
+  src: local('Fira Sans Regular'),
+    url('fonts/FiraSans-Regular.eot') format('embedded-opentype'),
+    url('fonts/FiraSans-Regular.woff') format('woff'),
+    url('fonts/FiraSans-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face{
+    font-family: 'Fira Mono';
+    src: url('fonts/Fira/eot/FiraMono-Regular.eot');
+    src: local('Fira Mono'),
+         url('fonts/Fira/eot/FiraMono-Regular.eot') format('embedded-opentype'),
+         url('fonts/Fira/woff/FiraMono-Regular.woff') format('woff'),
+         url('fonts/Fira/ttf/FiraMono-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
 }
 
 @import url(http://fonts.googleapis.com/css?family=Raleway:700);
