update log in/register forms

--- a/public/css/css.less
+++ b/public/css/css.less
@@ -70,17 +70,27 @@ body{
         font-size: 14px;
       }
 
-      #login-button{
+      .login-register-button{
         display: block;
         margin-top: 15px;
         background: #444444;
         color: white;
         text-align: center;
         padding: 4px;
+        cursor: pointer;
       }
 
       h3.pointer{
         margin-bottom: 10px;
+      }
+
+      p.pointer{
+        margin-top: 10px;
+        cursor: pointer;
+      }
+
+      div{
+        clear: both;
       }
     }
   }
@@ -92,6 +102,7 @@ body{
     font-family: monospace;
     cursor: pointer;
     text-align: right;
+    float: right;
   }
 
   p{
