--- a/views/index.html
+++ b/views/index.html
@@ -54,6 +54,10 @@
 
     </div><!-- wiki-content -->
 
+    <div id="wiki-options" ui-view="wikioptions">
+
+    </div><!-- wiki-options-->
+
 
   </body>
 </html>
