--- a/public/templates/options_sidebar.html
+++ b/public/templates/options_sidebar.html
@@ -1,3 +1,3 @@
-<h1>page name here</h1>
+<h1>{{ fileName }}</h1>
 
-<div id="edit-page-button">edit page</div>
+<a href="{{ editUrl }}" id="edit-page-button" ng-show="fileName">edit page</div>
