Add controller for editor

--- a/public/css/css.less
+++ b/public/css/css.less
@@ -166,6 +166,10 @@ body{
     line-height: 20px;
     color: #242424;
   }
+
+  .CodeMirror{
+    border: 1px solid #000;
+  }
 }
 
 #wiki-options{
