--- a/public/templates/file_sidebar.html
+++ b/public/templates/file_sidebar.html
@@ -1,1 +1,3 @@
-<a class="entity" href="#/w{{ currentPath }}{{item.name}}" ng-repeat="item in files | orderBy: 'name'">{{ item.name }}</a>
+<div id="pages-list">
+  <a class="entity" href="#/w{{ currentPath }}{{item.name}}" ng-repeat="item in files | orderBy: 'name'">{{ item.name }}</a>
+</a>
