--- a/public/templates/wiki_edit.html
+++ b/public/templates/wiki_edit.html
@@ -1,2 +1,4 @@
-<div ui-codemirror="{onLoad: codemirrorLoaded}" ui-codemirror-opts="editorOptions" ng-model="pageRaw">
+<div id="wiki-editor">
+  <div ui-codemirror="{onLoad: codemirrorLoaded}" ui-codemirror-opts="editorOptions" ng-model="pageRaw">
+  </div>
 </div>
