--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/css/css.css" />
     <link rel="stylesheet" href="/css/fonts/fontello/css/fontello.css" />
     <link rel="stylesheet" href="/css/codemirror.css" />
+    <link rel="stylesheet" href="/css/codemirror_theme.css" />
     <script type="text/javascript" src="js/lib/codemirror-compressed.js"></script>
     <script type="text/javascript" src="js/lib/angular.min.js"></script>
     <script type="text/javascript" src="js/lib/angular-ui-router.min.js"></script>
@@ -50,7 +51,7 @@
     </div><!-- sidebar -->
 
 
-    <div id="wiki-content" ui-view="wiki">
+    <div ui-view="wiki">
     </div><!-- wiki-content -->
 
 
